# pixelwars

./: .gitignore  CMakeLists.txt  README.md  todo  todo~
analyse/: CDC.odt  game.uxf  graphical engine.uxf
src/: Pixel'swar.cbp  Pixel'swar.depend  Pixel'swar.layout  game.cpp  game.h  main.cpp
src/core/: conversion.cpp  conversion.h  random.cpp  random.h  trigo.cpp  trigo.h
src/doxygen/: doxyfile
src/doxygen/html/: annotated.html  cameramanager_8h_source.html  class_assert_exception-members.html  class_assert_exception.html  class_camera_manager-members.html  class_camera_manager.html  class_console_logger-members.html  class_console_logger.html  class_exception-members.html  class_exception.html  class_file_logger-members.html  class_file_logger.html  class_graphical_engine-members.html  class_graphical_engine.html  class_gui_button_item-members.html  class_gui_button_item.html  class_gui_item-members.html  class_gui_item.html  class_gui_manager-members.html  class_gui_manager.html  class_logger-members.html  class_logger.html  class_scene_manager-members.html  class_scene_manager.html  class_scene_node-members.html  class_scene_node.html  class_scene_node_item-members.html  class_scene_node_item.html  class_scene_node_shape_item-members.html  class_scene_node_shape_item.html  class_scene_node_sprite_item-members.html  class_scene_node_sprite_item.html  class_singleton-members.html  class_singleton.html  class_texture_manager-members.html  class_texture_manager.html  classes.html  (+28 more)
src/engines/: engine.cpp  engine.h  engineevent.cpp  engineevent.h  type.h
(+118 files in other folders)
